221129_GameOver_BestScore_SaveGame

--- a/ShootingProject/Config/DefaultGame.ini
+++ b/ShootingProject/Config/DefaultGame.ini
@@ -6,3 +6,7 @@ ProjectID=6CD0CA884A5159F1C723E9BB322C64A3
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+StagingDirectory=(Path="../../../../../../Users/ASUS/Desktop/MyFirstShooting")
+
