--- a/Grapics/Config/DefaultEngine.ini
+++ b/Grapics/Config/DefaultEngine.ini
@@ -17,11 +17,12 @@ DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
 
 [/Script/Engine.RendererSettings]
 r.GenerateMeshDistanceFields=True
-r.DynamicGlobalIlluminationMethod=0
-r.ReflectionMethod=0
+r.DynamicGlobalIlluminationMethod=1
+r.ReflectionMethod=1
 r.Shadow.Virtual.Enable=1
 r.DefaultFeature.AutoExposure=True
 r.DefaultFeature.AutoExposure.Bias=1.000000
+r.DefaultFeature.AutoExposure.Method=0
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
